style: 修改cesium官网管线颜色、修改滚动条默认样式

--- a/src/static/css/common.scss
+++ b/src/static/css/common.scss
@@ -131,7 +131,7 @@
     border-radius: 10px !important;
     // box-shadow: inset 0 0 5px #666 !important;
     /* 颜色 */
-    background:#ccc!important;
+    background:#192735!important;
     /* 线性渐变背景 */
     // background-image: linear-gradient(45deg, #ffbd61 25%,#ffbd61 25%, #ff8800 25%, #ff8800 50%,#ffbd61 50%, #ffbd61 75%, #ff8800 75%, #ff8800 100%)!important;
 }
@@ -140,5 +140,5 @@
 ::-webkit-scrollbar-track {
     // border-radius: 10px !important;
     // box-shadow: inset 0 0 5px #409eff !important;
-    background: #EDEDED !important;
+    background: transparent !important;
 }
